# uncertainty-simple-perceptron_rust

./: Cargo.toml  README.md
.github/workflows/: ci.yml  main.yml
src/: lib.rs  main.rs  model.rs
tests/: cases.json  integration-tests.rs
