[package]
name = "perceptron"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
simple_logger = "5.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[test]]
name = "test"
path = "tests/integration-tests.rs"

[dev-dependencies]
rstest = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"